Splt seizre data inot 2 animals, not more

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -10,7 +10,7 @@
         "osdb_3min_falseAlarms.json"
     ],
 	"eventFilters": {
-		"includeUserIds" : ["39"], 
+		"includeUserIds" : [], 
 		"excludeUserIds" : [],
 		"includeTypes" : [],
 		"excludeTypes" : [],
@@ -24,6 +24,7 @@
 		"requireO2SatData" : false,
 		"require3dData" : false
 		},
+    "allDataFileJson": "allData.json",
     "testDataFileJson": "testData.json",
     "trainDataFileJson": "trainData.json",
     "valDataFileJson": "valData.json",
@@ -35,13 +36,13 @@
 
     "_modelFname": "cnn",
     "_modelClass": "cnnModel.CnnModel",
-    "__modelFname": "specCnn",
-    "__modelClass": "specCnnModel.SpecCnnModel",
-    "modelFname": "amber",
-    "modelClass": "amberModel.AmberModel",
+    "modelFname": "specCnn",
+    "modelClass": "specCnnModel.SpecCnnModel",
+    "__modelFname": "amber",
+    "__modelClass": "amberModel.AmberModel",
     "amberRowHidden": 128,
     "amberColHidden": 128,
-    "dims": 1,
+    "dims": 2,
     "analysisSamp": 250, 
     "specSamp": 50, 
     "specStep":5,
@@ -59,7 +60,7 @@
     "accSdThreshold": 2.0,
     "testProp" : 0.3,
     "validationProp": 0.3,
-    "randomSeed" : 4,
+    "randomSeed" : 42,
     "lrFactor" : 0.5,
     "lrPatience": 5,
     "lrStart": 1e-6,
