--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -6,12 +6,12 @@
         "_cacheDir": ". <set this if you do not want to use the default osdb cache directory>",
         "osdbFiles_desc": "List of Open Seizure Database files to be used as input for the data preparation",
         "osdbFiles": [
-            "osdb_3min_allSeizures.json",
-            "osdb_3min_falseAlarms.json"
+            "osdb_3min_allSeizures.json"
         ],
         "_osdbFiles": [
             "debugEvents.json",
-            "osdb_3min_ndaEvents.json"    
+            "osdb_3min_ndaEvents.json",
+            "osdb_3min_falseAlarms.json"    
         ]
     },
     "dataFileNames_desc": "Names of data files used in data preparation for training and testing",
@@ -56,12 +56,11 @@
         "testProp" : 0.3,
         "validationProp": 0.0,
         "seizureTimeRange":[-20,20],
-        "features": {
-            "acc_magnitude": true,
-            "acc_3d": false,
-            "hr": true,
-            "o2sat": false
-        }
+        "features": [
+            "hr",
+            "o2sat",
+            "acc_magnitude"
+        ]
     },
 
     "modelConfig_desc": "Configuration for the neural network model including architecture and training parameters",
