--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -6,11 +6,10 @@
         "_cacheDir": ". <set this if you do not want to use the default osdb cache directory>",
         "osdbFiles_desc": "List of Open Seizure Database files to be used as input for the data preparation",
         "osdbFiles": [
-            "osdb_3min_ndaEvents.json",
+            "osdb_3min_falseAlarms.json",
             "osdb_3min_allSeizures.json"
         ],
         "_osdbFiles": [
-            "osdb_3min_ndaEvents.json",
             "osdb_3min_falseAlarms.json",
             "debugEvents.json",
             "osdb_3min_ndaEvents.json",
@@ -27,7 +26,9 @@
         "testBalancedFileCsv": "testDataBalanced.csv",
         "trainDataFileCsv": "trainData.csv",
         "valDataFileCsv": "valData.csv",
-        "trainAugmentedFileCsv": "trainDataAugmented.csv"
+        "trainAugmentedFileCsv": "trainDataAugmented.csv",
+        "trainFeaturesFileCsv": "trainFeatures.csv",
+        "testFeaturesFileCsv": "testFeatures.csv"
     },
     "eventFilters_desc": "Filters applied to events to select which ones are used in training and testing",
 	"eventFilters": {
