--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -48,8 +48,10 @@
 		},
     "dataProcessing_desc": "Settings for how data is processed before training",
     "dataProcessing": {
+        "window": 500,
+        "step": 125,
         "oversample": "none",
-        "undersample": "random",
+        "undersample": "none",
         "noiseAugmentation": false,
         "noiseAugmentationFactor": 20,
         "noiseAugmentationValue": 30.0,
@@ -84,7 +86,7 @@
             "powerMag_6.5-8.5",
             "powerMag_8.5-10.5",
             "powerMag_10.5-12.5",
-           "meanLineLengthX",
+            "meanLineLengthX",
             "powerX_0.5-2.5",
             "powerX_2.5-4.5",
             "powerX_4.5-6.5",
