--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -49,10 +49,12 @@
 		},
     "dataProcessing_desc": "Settings for how data is processed before training",
     "dataProcessing": {
-        "window": 500,
-        "step": 25,
+        "highPassFreq": 0.5,
+        "highPassOrder":2,
+        "window": 125,
+        "step": 125,
         "oversample": "none",
-        "undersample": "none",
+        "undersample": "random",
         "noiseAugmentation": false,
         "noiseAugmentationFactor": 20,
         "noiseAugmentationValue": 30.0,
@@ -64,37 +66,10 @@
         "validationProp": 0.0,
         "seizureTimeRange":[-20,20],
         "features": [
+            "osdSpecPower",
+            "osdRoiPower",
             "specPower",
-            "roiPower",
-            "meanLineLengthMag",
-            "powerMag_0.5-2.5",
-            "powerMag_2.5-4.5",
-            "powerMag_4.5-6.5",
-            "powerMag_6.5-8.5",
-            "powerMag_8.5-10.5",
-            "powerMag_10.5-12.5",
-            "meanLineLengthX",
-            "powerX_0.5-2.5",
-            "powerX_2.5-4.5",
-            "powerX_4.5-6.5",
-            "powerX_6.5-8.5",
-            "powerX_8.5-10.5",
-            "powerX_10.5-12.5",
-            "meanLineLengthY",
-            "powerY_0.5-2.5",
-            "powerY_2.5-4.5",
-            "powerY_4.5-6.5",
-            "powerY_6.5-8.5",
-            "powerY_8.5-10.5",
-            "powerY_10.5-12.5",
-            "meanLineLengthZ",
-            "powerZ_0.5-2.5",
-            "powerZ_2.5-4.5",
-            "powerZ_4.5-6.5",
-            "powerZ_6.5-8.5",
-            "powerZ_8.5-10.5",
-            "powerZ_10.5-12.5"
-
+            "roiPower"
         ],
         "_all_features": [
             "hr",
@@ -139,10 +114,10 @@
         "modelFname": "rfModel",
         "modelClass": "rfModel.RfModel",
         "classWeights": {
-            "0": 1.0,
-            "1": 20.0
+            "0": 4.0,
+            "1": 1.0
         },
-        "n_estimators": 50,
+        "n_estimators": 100,
         "max_depth": 10
     }
 
