Added (very rudimentary) tests for the nnTraining toolchain using the skeleton provided by github copilot.   It really needs a lot of specific tests adding to check the feature extraction etc. is working correctly

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -69,7 +69,44 @@
             "osdSpecPower",
             "osdRoiPower",
             "specPower",
-            "roiPower"
+            "roiPower",
+            "activity_count_magnitude",
+            "mean_magnitude",
+            "std_magnitude",
+            "skewness_magnitude",
+            "kurtosis_magnitude", 
+            "zcr_magnitude", 
+            "mean_freq_magnitude", 
+            "entropy_magnitude", 
+            "total_power_magnitude_osdRoi", 
+            "peak_psd_magnitude_osdRoi", 
+            "total_power_magnitude_osdSpec", 
+            "peak_psd_magnitude_osdSpec", 
+            "total_power_magnitude_osdFlap", 
+            "peak_psd_magnitude_osdFlap", 
+            "total_power_magnitude_seizure_main", 
+            "peak_psd_magnitude_seizure_main", 
+            "total_power_magnitude_initial_clonus", 
+            "peak_psd_magnitude_initial_clonus", 
+            "total_power_magnitude_late_clonus", 
+            "peak_psd_magnitude_late_clonus", 
+            "total_power_magnitude_1-3Hz", 
+            "peak_psd_magnitude_1-3Hz", 
+            "total_power_magnitude_2-4Hz", 
+            "peak_psd_magnitude_2-4Hz", 
+            "total_power_magnitude_3-5Hz", 
+            "peak_psd_magnitude_3-5Hz", 
+            "total_power_magnitude_4-6Hz", 
+            "peak_psd_magnitude_4-6Hz", 
+            "total_power_magnitude_5-7Hz", 
+            "peak_psd_magnitude_5-7Hz", 
+            "total_power_magnitude_6-8Hz", 
+            "peak_psd_magnitude_6-8Hz", 
+            "total_power_magnitude_7-9Hz", 
+            "peak_psd_magnitude_7-9Hz", 
+            "total_power_magnitude_8-10Hz", 
+            "peak_psd_magnitude_8-10Hz"
+
         ],
         "_all_features": [
             "hr",
