--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -6,13 +6,12 @@
         "_cacheDir": ". <set this if you do not want to use the default osdb cache directory>",
         "osdbFiles_desc": "List of Open Seizure Database files to be used as input for the data preparation",
         "osdbFiles": [
-            "osdb_3min_ndaEvents.json",
-            "osdb_3min_falseAlarms.json",
-            "osdb_3min_allSeizures.json"
+            "simulated_events.json"
         ],
         "_osdbFiles": [
-            "osdb_3min_falseAlarms.json",
             "debugEvents.json",
+            "simulated_events.json",
+            "osdb_3min_allSeizures.json",
             "osdb_3min_ndaEvents.json",
             "osdb_3min_falseAlarms.json"    
         ]
