Updated extractFeatures to save all features, not just those selected for training, to save processing time if we want to change features in the future...but having trouble with running out of memory now...

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -75,20 +75,51 @@
             "kurtosis_magnitude", 
             "mean_freq_magnitude", 
             "entropy_magnitude", 
-            "meanLineLengthMag",
-            "powerMag_0.5-2.5",
-            "powerMag_2.5-4.5",
-            "powerMag_4.5-6.5",
-            "powerMag_6.5-8.5",
-            "powerMag_8.5-10.5",
-            "powerMag_10.5-12.5",
+            "activity_count_x",
+            "mean_x",
+            "std_x",
+            "skewness_x",
+            "kurtosis_x", 
+            "mean_freq_x", 
+            "entropy_x", 
+            "activity_count_y",
+            "mean_y",
+            "std_y",
+            "skewness_y",
+            "kurtosis_y", 
+            "mean_freq_y", 
+            "entropy_y", 
+            "activity_count_z",
+            "mean_z",
+            "std_z",
+            "skewness_z",
+            "kurtosis_z", 
+            "mean_freq_z", 
+            "entropy_z", 
             "total_power_magnitude_seizure_main", 
             "total_power_magnitude_initial_clonus", 
             "total_power_magnitude_late_clonus",
             "total_power_magnitude_osdRoi", 
             "total_power_magnitude_osdSpec", 
             "total_power_magnitude_osdFlap",
-            "acc_magnitude"
+            "total_power_x_seizure_main", 
+            "total_power_x_initial_clonus", 
+            "total_power_x_late_clonus",
+            "total_power_x_osdRoi", 
+            "total_power_x_osdSpec", 
+            "total_power_x_osdFlap",
+            "total_power_y_seizure_main", 
+            "total_power_y_initial_clonus", 
+            "total_power_y_late_clonus",
+            "total_power_y_osdRoi", 
+            "total_power_y_osdSpec", 
+            "total_power_y_osdFlap",
+            "total_power_z_seizure_main", 
+            "total_power_z_initial_clonus", 
+            "total_power_z_late_clonus",
+            "total_power_z_osdRoi", 
+            "total_power_z_osdSpec", 
+            "total_power_z_osdFlap"
         ],
         "_all_features": [
             "osdSpecPower",
