Added tests folder to the repository - I'm not sure if these are the best ones or the ones in the root folder/tests - they were AI generated and I haven't checked them

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -6,7 +6,9 @@
         "_cacheDir": ". <set this if you do not want to use the default osdb cache directory>",
         "osdbFiles_desc": "List of Open Seizure Database files to be used as input for the data preparation",
         "osdbFiles": [
-            "testData.json"
+            "osdb_3min_allSeizures.json",
+            "osdb_3min_ndaEvents.json",
+            "osdb_3min_falseAlarms.json"    
         ],
         "_osdbFiles": [
             "debugEvents.json",
@@ -50,13 +52,13 @@
 		},
     "dataProcessing_desc": "Settings for how data is processed before training",
     "dataProcessing": {
-        "nHistory": 3,
+        "nHistory": 5,
         "highPassFreq": 0.5,
         "highPassOrder":2,
         "window": 125,
         "step": 125,
-        "oversample": "random",
-        "undersample": "none",
+        "oversample": "none",
+        "undersample": "random",
         "worker_count": null,
         "batch_size": 1000,
         "stream_chunksize": 20000,
@@ -73,58 +75,21 @@
         "validationProp": 0.0,
         "seizureTimeRange":[-20,20],
         "features": [
-            "activity_count_magnitude",
-            "mean_magnitude",
-            "std_magnitude",
-            "skewness_magnitude",
-            "kurtosis_magnitude", 
-            "mean_freq_magnitude", 
-            "entropy_magnitude", 
-            "activity_count_x",
             "mean_x",
-            "std_x",
-            "skewness_x",
-            "kurtosis_x", 
             "mean_freq_x", 
-            "entropy_x", 
-            "activity_count_y",
             "mean_y",
-            "std_y",
-            "skewness_y",
-            "kurtosis_y", 
             "mean_freq_y", 
-            "entropy_y", 
-            "activity_count_z",
             "mean_z",
-            "std_z",
-            "skewness_z",
-            "kurtosis_z", 
             "mean_freq_z", 
-            "entropy_z", 
-            "total_power_magnitude_seizure_main", 
-            "total_power_magnitude_initial_clonus", 
-            "total_power_magnitude_late_clonus",
-            "total_power_magnitude_osdRoi", 
-            "total_power_magnitude_osdSpec", 
-            "total_power_magnitude_osdFlap",
             "total_power_x_seizure_main", 
             "total_power_x_initial_clonus", 
             "total_power_x_late_clonus",
-            "total_power_x_osdRoi", 
-            "total_power_x_osdSpec", 
-            "total_power_x_osdFlap",
             "total_power_y_seizure_main", 
             "total_power_y_initial_clonus", 
             "total_power_y_late_clonus",
-            "total_power_y_osdRoi", 
-            "total_power_y_osdSpec", 
-            "total_power_y_osdFlap",
             "total_power_z_seizure_main", 
             "total_power_z_initial_clonus", 
-            "total_power_z_late_clonus",
-            "total_power_z_osdRoi", 
-            "total_power_z_osdSpec", 
-            "total_power_z_osdFlap"
+            "total_power_z_late_clonus"
         ],
         "_all_features": [
             "osdSpecPower",
@@ -212,7 +177,7 @@
             "0": 1.0,
             "1": 1.0
         },
-        "n_estimators": 200,
+        "n_estimators": 100,
         "max_depth": 30
     }
 
