Fixed some issues with selectdata filtering

--- a/user_tools/nnTraining2/nnConfig_deep_run.json
+++ b/user_tools/nnTraining2/nnConfig_deep_run.json
@@ -49,11 +49,11 @@
         "includeTypes": ["seizure", "false alarm", "nda"],
         "excludeTypes": [],
         "includeSubTypes": [],
-        "excludeSubTypes": [],
+		"excludeSubTypes" : ["Unknown", "null", "Null", "Check", "check"],
         "includeDataSources": [],
-        "excludeDataSources": [],
+		"excludeDataSources" : ["Phone", "AndroidWear"],
         "includeText": [],
-        "excludeText": [],
+		"excludeText" : ["bulk type/subtype set"],
         "require3dData": false,
         "requireHrData": false,
         "requireO2SatData": false
